--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ before_install:
   - sudo add-apt-repository -y ppa:boost-latest/ppa
   - sudo apt-get update -qq
 install:
-  - sudo apt-get install -qq g++-4.8 libboost-all-dev
+  - sudo apt-get install -qq g++-4.8 libboost1.55-all-dev 
   - export CXX="g++-4.8"
 script:
   - make all
-
