--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,23 @@
-cmake_minimum_required (VERSION 2.8)
+cmake_minimum_required(VERSION 3.18)
+
+if(DEFINED ENV{VCPKG_DEFAULT_TRIPLET})
+  message(STATUS "Setting default vcpkg target triplet to $ENV{VCPKG_DEFAULT_TRIPLET}")
+  set(VCPKG_TARGET_TRIPLET $ENV{VCPKG_DEFAULT_TRIPLET})
+endif()
+
+if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+  set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
+  message(STATUS "VCPKG found: $ENV{VCPKG_ROOT}")
+  message(STATUS "Using VCPKG integration")
+elseif(DEFINED CMAKE_TOOLCHAIN_FILE)
+  message(STATUS "Using toolchain: ${CMAKE_TOOLCHAIN_FILE}")
+  if(CMAKE_TOOLCHAIN_FILE MATCHES "vcpkg.cmake")
+    message(STATUS "Toolchain uses VCPKG integration")
+  endif()
+else()
+  message(WARNING "vcpkg not found, toolchain not defined, build might fail")
+endif()
+
 project (split_module_files)
 enable_language(CXX)
 set (CMAKE_CXX_STANDARD 11)
@@ -14,11 +33,8 @@ include_directories(${Boost_INCLUDE_DIR})
 
 add_executable (split_module_files "${CMAKE_SOURCE_DIR}/src/split_module_files.cpp")
 
-target_link_libraries(split_module_files 
+target_link_libraries(split_module_files
   ${Boost_LIBRARIES}
-) 
+)
 
 install (TARGETS split_module_files	DESTINATION ${CMAKE_SOURCE_DIR}/bin/)
-
-
-
